# astrotransit

./: .gitignore  DESKTOP_README.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_BUILD_FIX.md  MACOS_README.md  MACOS_SUMMARY.md  README.md  README_WINDOWS.md  TOKEN_ANALYSIS.md  WEB_APP_README.md  WINDOWS_DISTRIBUTION_GUIDE.md  build_mac.sh  build_windows.bat  build_windows.ps1  build_windows_from_mac.sh  dev_mac.sh  instruction.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_mac.sh  start_api.py  start_frontend.py  test_api.py
.github/workflows/: build-windows.yml
api/: main.py
astrocsv/: __init__.py  cli.py  csvout.py  ephem.py  mapping.py  mapping_library.py
astrocsv/ephe/: README.md
examples/: multiple_locations.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: AstroCalculator.js  Header.js  ResultsDisplay.js  Sidebar.js
python_backend/: main.py  requirements.txt
